# DeepLife

./: README.md  main.py  pyproject.toml  test.ipynb
Deeplife/groupwork/: Project01_interpretableVAE_bayesian_clamp_mu_david.ipynb  Project01_interpretableVAE_clamp_mu.ipynb  Project01_interpretableVAE_clamp_mu_bayesian_yusuf.ipynb  Project01_interpretableVAE_default.ipynb  alice_mask_from_original.ipynb  vega_weights_bayesian_yusuf.csv  weights_bayesian_control.csv  weights_bayesian_stimulated.csv
Deeplife/hackhathon/: Team2_Project01_interpretableVAE.ipynb  data_and_mask.py  data_process_and_get_mask.py  device.py  get_data.py  run_default.ipynb  tmp.ipynb  training.py  visualize.ipynb
Deeplife/hackhathon/group_results/control/: control_bayes_all_weight_mean.csv  control_bayes_all_weight_uncertainty_mean.csv  control_vega_all_weight_mean.csv  control_vega_all_weight_std.csv
Deeplife/hackhathon/group_results/stimulated/: stimulated_bayes_all_weight_mean.csv  stimulated_vega_all_weight_mean.csv
Deeplife/hackhathon/model/: decoder_bayes.py  decoder_default.py  decoder_swa.py  encoder_with_mu_clamp.py  vega.py
Deeplife/hackhathon/save_model/vega/: all_bayes_all_weight_mean.csv  all_bayes_all_weight_std.csv  all_bayes_all_weight_uncertainty_mean.csv  all_vega_all_weight_mean.csv  all_vega_all_weight_std.csv  control_bayes_all_uncertainties_iterations.tsv  control_bayes_all_weight_mean.csv  losses.csv  (+14 more)
Deeplife/hackhathon/training/: train_bayes.py  train_default.py  train_default_theirs copy.py  train_swa.py  training.py
thrash/DeepLife/: weights plot.ipynb
